<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">
    <fragment
        android:id="@+id/home_dest"
        android:name="hepta.rxposed.manager.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <!-- TODO STEP 7.1 - Add action with transitions -->
        <action
            android:id="@+id/next_action"
            app:destination="@+id/flow_step_one_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/check_dest"
        android:name="hepta.rxposed.manager.fragment.check.checkFragment"
        android:label="@string/check"
        tools:layout="@layout/fragment_check" />

    <fragment
        android:id="@+id/processlist_dest"
        android:name="hepta.rxposed.manager.fragment.process.ProcessFragment"
        android:label="@string/inject"
        tools:layout="@layout/processlist_fragment"/>



    <fragment
        android:id="@+id/settings_dest"
        android:name="hepta.rxposed.manager.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/modules_dest"
        android:name="hepta.rxposed.manager.fragment.LoadExten.ExtenFragment"
        android:label="@string/modules"
        tools:layout="@layout/fragment_modules" />
    <fragment
        android:id="@+id/pluginject_dest"
        android:name="hepta.rxposed.manager.fragment.PlugInject.SupportFragment"
        android:label="@string/frameworks"
        tools:layout="@layout/fragment_frameworks" />


    <fragment
        android:id="@+id/process_info_dest"
        android:name="hepta.rxposed.manager.fragment.process.processInfo.ProcessInfoFragment"
        android:label="@string/proces"
        tools:layout="@layout/fragment_userprocess" />
    <fragment
        android:id="@+id/extend_apps_dest"
        android:name="hepta.rxposed.manager.fragment.LoadExten.apps.ExtenAppFragment"
        android:label="@string/apps"
        tools:layout="@layout/fragment_applist" />


</navigation>
